added commands.html file and images on it

--- a/index.html
+++ b/index.html
@@ -24,6 +24,30 @@
         <li>Tracking who made changes</li>
         <li>Coding collaboration</li>
     </ul>
-    
+
+    <h1>How to use git</h1>
+
+    <p>this section will explain how to use git</p>
+
+    <ul>
+        <li>Initialize Git on a folder, making it a Repository</li>   
+        <li>Git now creates a hidden folder to keep track of changes in that folder
+        </li>   
+        <li>When a file is changed, added or deleted, it is considered modified
+        </li>   
+        <li>You select the modified files you want to Stage
+        </li>   
+        <li>The Staged files are Committed, which prompts Git to store a permanent snapshot of the files
+        </li>
+        <li>Git allows you to see the full history of every commit.
+        </li>
+        <li>You can revert back to any previous commit.
+        </li>
+        <li>Git does not store a separate copy of every file in every commit, but keeps track of changes made in each commit!</li>
+    </ul>
+    <h2>Git install</h2>
+    <p>You can download Git for free from the following website: https://www.git-scm.com/</p>
+
+    <a href="/commands.html">Commands section</a>
 </body>
 </html>
