--- a/commands.html
+++ b/commands.html
@@ -9,17 +9,27 @@
 </head>
 <body>
 
-    <h2>Version command</h2>
+    <ul><li>
+    <h2>Version command</h2></li></ul>
     <p>To check version of currently installed git write</p>
     <img src="/images/version.jpg" alt="Imag not found" srcset="">
 
 
 
-
+    <ul><li>
+        <h2>Init command</h2></li></ul>
+        <p>to initialize git on current folder write</p>
+        <img src="/images/init.jpg" alt="Imag not found" srcset="">
+    
+        <ul><li>
+            <h2>Git status</h2></li></ul>
+            <p>To check status of git do</p>
+            <img src="/images/status.jpg" alt="Imag not found" srcset="">
 
 <div>
     <a href="/index.html">Back to Main page</a>
 </div>
     
+
 </body>
 </html>
