--- a/commands.html
+++ b/commands.html
@@ -25,6 +25,7 @@
             <h2>Git status</h2></li></ul>
             <p>To check status of git do</p>
             <img src="/images/status.jpg" alt="Imag not found" srcset="">
+            <p>above image shows that git status shows that 2 files need to be added</p>
 
 <div>
     <a href="/index.html">Back to Main page</a>
