added commands.css file

--- a/commands.html
+++ b/commands.html
@@ -27,6 +27,12 @@
             <img src="/images/status.jpg" alt="Imag not found" srcset="">
             <p>above image shows that git status shows that 2 files need to be added</p>
 
+            <ul><li>
+                <h2>Adding new files</h2></li></ul>
+                <p>To add files in your repository</p>
+                <img src="/images/add.jpg" alt="Imag not found" srcset="">
+                <p>Now commands.css file is added into the repository</p>
+
 <div>
     <a href="/index.html">Back to Main page</a>
 </div>
