added commit section

--- a/commands.html
+++ b/commands.html
@@ -33,6 +33,12 @@
                 <img src="/images/add.jpg" alt="Imag not found" srcset="">
                 <p>Now commands.css file is added into the repository</p>
 
+                <ul><li>
+                    <h2>Commiting</h2></li></ul>
+                    <p>after adding, you have to commit files also</p>
+                    <img src="/images/add.jpg" alt="Imag not found" srcset="">
+                    <p>Now commands.css file is added into the repository</p>
+
 <div>
     <a href="/index.html">Back to Main page</a>
 </div>
