--- a/commands.html
+++ b/commands.html
@@ -36,8 +36,8 @@
                 <ul><li>
                     <h2>Commiting</h2></li></ul>
                     <p>after adding, you have to commit files also</p>
-                    <img src="/images/add.jpg" alt="Imag not found" srcset="">
-                    <p>Now commands.css file is added into the repository</p>
+                    <img src="/images/commit.jpg" alt="Imag not found" srcset="">
+                    <p>The commit command performs a commit, and the -m "message" adds a message</p>
 
 <div>
     <a href="/index.html">Back to Main page</a>
