added text in branch.html

--- a/branch.html
+++ b/branch.html
@@ -8,6 +8,16 @@
     <title>Branch</title>
 </head>
 <body>
+
+    <h2>Create a branch</h2>
+
+    <ul><li>git branch</li>
     
+    <li>git check</li>
+    <li>git merge</li>
+    </ul>
+
+    <a href="/index.html">Back to main page</a>
+
 </body>
 </html>
