--- a/commands.html
+++ b/commands.html
@@ -42,6 +42,10 @@
 <div>
     <a href="/index.html">Back to Main page</a>
 </div>
+
+<div>
+    <a href="/branch.html">Branch section</a>
+</div>
     
 
 </body>
