--- a/branch.html
+++ b/branch.html
@@ -17,6 +17,21 @@
     <li>git merge</li>
     </ul>
 
+    <h2>Making a new branche</h2>
+    <p>To make a new branch</p>
+    
+    <img src="/images/branch.jpg" alt="" srcset="">
+
+    <p>Now a new branch is created of the name branch2</p>
+
+    <h2>Switching between branches  </h2>
+     <p> to move to another branch  use  <b>checkout command</b> </p>
+     <img src="/images/checkout.jpg" alt="" srcset="">
+     <p>Now we are in branch 2</p>
+     
+
+
+
     <a href="/index.html">Back to main page</a>
 
 </body>
