--- a/branch.html
+++ b/branch.html
@@ -28,10 +28,16 @@
      <p> to move to another branch  use  <b>checkout command</b> </p>
      <img src="/images/checkout.jpg" alt="" srcset="">
      <p>Now we are in branch 2</p>
+
+
      
 
+    <h2>deleting a branch   </h2>
+     <p> To delete a branch </p>
+     <img src="/images/delete.jpg" alt="" srcset="">
+     <p>Now branch2 is deleted</p>
 
-
+    <a href="/github.html">Github page</a>
     <a href="/index.html">Back to main page</a>
 
 </body>
