editing github.html file

--- a/branch.html
+++ b/branch.html
@@ -38,7 +38,8 @@
      <p>Now branch2 is deleted</p>
 
     <a href="/github.html">Github page</a>
+    <div>
     <a href="/index.html">Back to main page</a>
-
+</div>
 </body>
 </html>
