--- a/github.html
+++ b/github.html
@@ -7,6 +7,20 @@
     <title>Github</title>
 </head>
 <body>
+
+    <h1>Github</h1>
+
+    <h2>To view repository go to repository tab</h2>
+
+    <img  style="height: 300px; width: 700px;" src="/images/repository.jpg" alt="" srcset="">
+
+    <h2>To create a new repository, click on New button in repository tab</h2>
+
+    <img  style="height: 300px; width: 700px;" src="/images/new.jpg" alt="" srcset="">
+
+
+    <div>
+    <a href="/index.html">Back to main page</a></div>
     
 </body>
 </html>
