added clone image

--- a/github.html
+++ b/github.html
@@ -18,6 +18,12 @@
 
     <img  style="height: 300px; width: 700px;" src="/images/new.jpg" alt="" srcset="">
 
+    
+    <h2>To clone a repository, go to repository then click on code and copy the address</h2>
+
+    <img  style="height: 300px; width: 700px;" src="/images/new.jpg" alt="" srcset="">
+
+
 
     <div>
     <a href="/index.html">Back to main page</a></div>
