--- a/index.html
+++ b/index.html
@@ -48,6 +48,6 @@
     <h2>Git install</h2>
     <p>You can download Git for free from the following website: https://www.git-scm.com/</p>
 
-    <a href="/commands.html">Commands section</a>
+    <a href="commands.html">Commands section</a>
 </body>
 </html>
