removed reference error

--- a/branch.html
+++ b/branch.html
@@ -20,13 +20,13 @@
     <h2>Making a new branche</h2>
     <p>To make a new branch</p>
     
-    <img src="/images/branch.jpg" alt="" srcset="">
+    <img src="./images/branch.jpg" alt="" srcset="">
 
     <p>Now a new branch is created of the name branch2</p>
 
     <h2>Switching between branches  </h2>
      <p> to move to another branch  use  <b>checkout command</b> </p>
-     <img src="/images/checkout.jpg" alt="" srcset="">
+     <img src="./images/checkout.jpg" alt="" srcset="">
      <p>Now we are in branch 2</p>
 
 
@@ -34,12 +34,12 @@
 
     <h2>deleting a branch   </h2>
      <p> To delete a branch </p>
-     <img src="/images/delete.jpg" alt="" srcset="">
+     <img src="./images/delete.jpg" alt="" srcset="">
      <p>Now branch2 is deleted</p>
 
-    <a href="/github.html">Github page</a>
+    <a href="./github.html">Github page</a>
     <div>
-    <a href="/index.html">Back to main page</a>
+    <a href="./index.html">Back to main page</a>
 </div>
 </body>
 </html>
