--- a/github.html
+++ b/github.html
@@ -12,21 +12,21 @@
 
     <h2>To view repository go to repository tab</h2>
 
-    <img  style="height: 300px; width: 700px;" src="/images/repository.jpg" alt="" srcset="">
+    <img  style="height: 300px; width: 700px;" src="./images/repository.jpg" alt="" srcset="">
 
     <h2>To create a new repository, click on New button in repository tab</h2>
 
-    <img  style="height: 300px; width: 700px;" src="/images/new.jpg" alt="" srcset="">
+    <img  style="height: 300px; width: 700px;" src="./images/new.jpg" alt="" srcset="">
 
     
     <h2>To clone a repository, go to repository then click on code and copy the address</h2>
 
-    <img  style="height: 300px; width: 700px;" src="/images/new.jpg" alt="" srcset="">
+    <img  style="height: 300px; width: 700px;" src="./images/clone.jpg" alt="" srcset="">
 
 
 
     <div>
-    <a href="/index.html">Back to main page</a></div>
+    <a href="./index.html">Back to main page</a></div>
     
 </body>
 </html>
