removed reference error

--- a/commands.html
+++ b/commands.html
@@ -12,39 +12,39 @@
     <ul><li>
     <h2>Version command</h2></li></ul>
     <p>To check version of currently installed git write</p>
-    <img src="/images/version.jpg" alt="Imag not found" srcset="">
+    <img src="./images/version.jpg" alt="Imag not found" srcset="">
 
 
 
     <ul><li>
         <h2>Init command</h2></li></ul>
         <p>to initialize git on current folder write</p>
-        <img src="/images/init.jpg" alt="Imag not found" srcset="">
+        <img src="./images/init.jpg" alt="Imag not found" srcset="">
     
         <ul><li>
             <h2>Git status</h2></li></ul>
             <p>To check status of git do</p>
-            <img src="/images/status.jpg" alt="Imag not found" srcset="">
+            <img src="./images/status.jpg" alt="Imag not found" srcset="">
             <p>above image shows that git status shows that 2 files need to be added</p>
 
             <ul><li>
                 <h2>Adding new files</h2></li></ul>
                 <p>To add files in your repository</p>
-                <img src="/images/add.jpg" alt="Imag not found" srcset="">
+                <img src="./images/add.jpg" alt="Imag not found" srcset="">
                 <p>Now commands.css file is added into the repository</p>
 
                 <ul><li>
                     <h2>Commiting</h2></li></ul>
                     <p>after adding, you have to commit files also</p>
-                    <img src="/images/commit.jpg" alt="Imag not found" srcset="">
+                    <img src="./images/commit.jpg" alt="Imag not found" srcset="">
                     <p>The commit command performs a commit, and the -m "message" adds a message</p>
 
 <div>
-    <a href="/index.html">Back to Main page</a>
+    <a href="./index.html">Back to Main page</a>
 </div>
 
 <div>
-    <a href="/branch.html">Branch section</a>
+    <a href="./branch.html">Branch section</a>
 </div>
     
 
